--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <body>
     <h1>Todo App</h1>
     <form id="form">
-        <input type="text" placeholder="enter here" id="todo"><br><br>
+        <input type="text" placeholder="enter here" id="todo">
+        <br><br>
         <button type="submit">addTodo</button>
     </form>
     <ul id="ul">
